[package]
name = "dnslog-rs"
version = "1.0.0"
authors = ["AdySec <admin@adysec.com>"]
edition = "2021"

[dependencies]
actix-web = "4.0"
async-trait = "0.1"
chrono = "0.4"
rand = "0.8"
rusqlite = "0.27"
r2d2 = "0.8"
r2d2_sqlite = "0.20"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
trust-dns-server = "0.22"
trust-dns-proto = "0.22"
